# starbug2

./: .gitignore  .readthedocs.yaml  CHANGES.rst  CHANGES.txt  CITATION.bib  CITATION.cff  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  starbug.param
.github/workflows/: python-app.yml  python-publish.yml
docs/: install.md  starbug-manual.md
docs/source/: aperture.rst  api.rst  artificial.rst  background.rst  changes.rst  conf.py  detection.rst  faq.rst  guide.rst  index.rst  install.rst  param.rst  psf.rst  ref.rst  troubles.rst  typical.rst
docs/source/_static/css/: rtd_dark.css
docs/source/changes/: CHANGES.txt  old.rst  v0.6.rst  v0.7.rst  v0.8.rst
docs/source/usage/: artificial.rst  background.rst  detection.rst  matching.rst  param.rst  psf.rst
extras/: starbug2.completion
starbug2/: __init__.py  artificialstars.py  mask.py  matching.py  misc.py  param.py  plot.py  routines.py  starbug.py  utils.py
starbug2/extras/: dark.style  starbug.style  starbug2-afs.completion  starbug2-ast.completion  starbug2-match.completion  starbug2.completion
starbug2/param/: default.param
starbug2/scripts/: main.py
starbug2/tests/: generic.py  test_routines.py  test_utils.py
test/: test_starbug.py
tests/: _test_routines.py  _test_run.py  generic.py  test_artificialstars.py  test_ast.py  test_match_run.py  test_matching.py  test_misc.py  test_param.py  test_routines.py  test_run.py  test_starbug.py  test_utils.py  xtest_artificialstars.py
tests/dat/: image.fits  psf.fits  starbug.param  test.mask
