[metadata]
name = starbug2
version = 0.3.0
author = Conor Nally
author_email = conor.nally@ed.ac.uk
description = JWST PSF photometry in complex crowded fields.
long_description = file: README.md
license = GNU General Public License v3.0
license_files = file: LICENSE.txt

[options]
packages = find:
install_requires = 
    photutils
    astropy
    parse
    scipy
    webbpsf

[options.package_data]
* = *.param *.completion
