[metadata]
name = starbug2
version = 0.3.13
author = Conor Nally
author_email = conor.nally@ed.ac.uk
description = JWST PSF photometry in complex crowded fields.
long_description = file: README.md
license = GNU General Public License v3.0
license_files = file: LICENSE.txt

[options]
include_package_data=True
packages = find:
install_requires = 
    photutils>=1.6.0
    astropy
    parse
    scipy
    webbpsf
    scikit-image

[options.package_data]
* = *.param
