[metadata]
name = starbug2
version = 0.5.3
author = Conor Nally
author_email = conor.nally@ed.ac.uk
description = JWST PSF photometry in complex crowded fields.
long_description = file: README.md
license = GNU General Public License v3.0
license_files = file: LICENSE.txt

[options]
include_package_data=True
packages = find:
install_requires = 
	numpy>=1.25
    photutils>=1.9.0
    astropy
    parse
    scipy
    webbpsf
    scikit-image
	sphinx-rtd-theme


[options.package_data]
* = *.param
